Fixed overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,7 +361,7 @@ video {
   background: transparent;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
   position: absolute;
 }
 
